-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.1
-
None
While using Qt Creator's "Switch Header/Source" functionality, if you have a multiple projects, and one of those projects does not have a header/source but another project does and has the same name, then using the action on the file without a header/source will switch to the one of the same name in another project.
For those who don't understand, here are some steps:
- Create Project1, with Object.cpp and Object.hpp.
- Create Project2, with Object.hpp and open the file.
- Use "Switch Header/Source" on Object.hpp of Project2.
- Suddenly, you'll be in Project1's Object.cpp.
This has had me confused on several occasions. It is not proper behavior and the fix probably involves using a single conditional check on the project.